Copied WebGL HelloWorld for testing.
From:
https://github.com/MarkusSprunck/webgl-hello-world/blob/master/webgl-hello-world/

--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!DOCTYPE HTML>
-<html>
-
 <html>
   <head>
     <title>WebGL - Hello World!</title>
@@ -55,9 +52,10 @@
       }
     </script>
   </head>	
-
-<body>
-HTML Hello world.
-</body>
-
-</html> 
+  
+  <body onload="start()">
+    <canvas id="glcanvas" width="640" height="480">
+      Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
+    </canvas>
+  </body>
+</html>
