--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<script src="sylvester.js" type="text/javascript"></script>
     <script src="glUtils.js" type="text/javascript"></script>
-    <script src="webgl-demo.js" type="text/javascript"></script>
+    <center>
+		<script src="webgl-demo.js" type="text/javascript"></script>
+	</center>
 
    <!-- Fragment shader program -->
     <script id="shader-fs" type="x-shader/x-fragment">
