--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <html>
   <head>
+	<LINK href="eta_carinae.css" rel="stylesheet" type="text/css">
+  
     <title>WebGL - Hello World!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<script src="sylvester.js" type="text/javascript"></script>
     <script src="glUtils.js" type="text/javascript"></script>
-    <center>
+	
+	<div id="webgl_script">
 		<script src="webgl-demo.js" type="text/javascript"></script>
-	</center>
+	</div>
 
    <!-- Fragment shader program -->
     <script id="shader-fs" type="x-shader/x-fragment">
