--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script src="sylvester.js" type="text/javascript"></script>
     <script src="glUtils.js" type="text/javascript"></script>
 	
-	<div id="webgl_script">
+	<div class="webgl_script">
 		<script src="webgl-demo.js" type="text/javascript"></script>
 	</div>
 
