--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>WebGL - Hello World!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<div class="webgl_script">
+	<div class="center">
 		<script src="sylvester.js" type="text/javascript"></script>
 		<script src="glUtils.js" type="text/javascript"></script>
 		<script src="webgl-demo.js" type="text/javascript"></script>
