--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <title>WebGL - Hello World!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<div class="center">
-		<script src="sylvester.js" type="text/javascript"></script>
-		<script src="glUtils.js" type="text/javascript"></script>
-		<script src="webgl-demo.js" type="text/javascript"></script>
-	</div>
+	<script src="sylvester.js" type="text/javascript"></script>
+	<script src="glUtils.js" type="text/javascript"></script>
+	<script src="webgl-demo.js" type="text/javascript"></script>
 
    <!-- Fragment shader program -->
     <script id="shader-fs" type="x-shader/x-fragment">
@@ -56,9 +54,9 @@
     </script>
   </head>	
   
-  <body onload="start()">
-    <canvas id="glcanvas" width="640" height="480">
-      Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
-    </canvas>
-  </body>
+	<body onload="init()">
+		<div style="text-align: center">
+			<canvas id="canvas" width="640" height="480"></canvas>
+		</div>
+	</body>
 </html>
