--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <title>WebGL - Hello World!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<script src="sylvester.js" type="text/javascript"></script>
-	<script src="glUtils.js" type="text/javascript"></script>
-	<script src="webgl-demo.js" type="text/javascript"></script>
+	<div class="center">
+		<script src="sylvester.js" type="text/javascript"></script>
+		<script src="glUtils.js" type="text/javascript"></script>
+		<script src="webgl-demo.js" type="text/javascript"></script>
+	</div>
 
    <!-- Fragment shader program -->
     <script id="shader-fs" type="x-shader/x-fragment">
@@ -54,9 +56,16 @@
     </script>
   </head>	
   
-	<body onload="init()">
-		<div style="text-align: center">
-			<canvas id="canvas" width="640" height="480"></canvas>
-		</div>
+  <body onload="init()">
+	<div style="text-align: center">
+		<canvas id="canvas" width="640" height="480"></canvas>
+	</div>
 	</body>
+	<body onload="start()">
+	<div style="text-align: center">
+		<canvas id="glcanvas" width="640" height="480">
+			Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
+		</canvas>
+	</div>
+  </body>
 </html>
