--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 	<div class="center">
-		<script src="sylvester.js" type="text/javascript"></script>
-		<script src="glUtils.js" type="text/javascript"></script>
-		<script src="webgl-demo.js" type="text/javascript"></script>
+		<script src="js/sylvester.js" type="text/javascript"></script>
+		<script src="js/glUtils.js" type="text/javascript"></script>
+		<script src="js/webgl-demo.js" type="text/javascript"></script>
 	</div>
 
    <!-- Fragment shader program -->
