--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 	<body>
 		<script src="js/three.min.js"></script>
 		<script>
+			<!-- Scene, Camera and Renderer declaration and initialisation. -->
+			var scene = new THREE.Scene();
 			
+			var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+			camera.position.z = 5;
+			
+			var renderer = new THREE.WebGLRenderer();
+			renderer.setSize(window.innerWidth, window.innerHeight);
+			document.body.appendChild(renderer.domElement);
+			
+			<!-- Cube creation -->
+			var geometry = new THREE.CubeGeometry(1, 1, 1);
+			var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
+			var cube = new THREE.Mesh(geometry, material);
+			scene.add(cube);
+			
+			funtion render() {
+				requestAnimationFrame(render);
+				renderer.render(scene, camera);
+			}
+			
+			render();
 		</script>
 	</body>
 </html>
