--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<LINK href="eta_carinae.css" rel="stylesheet" type="text/css">
 		<title>WebGL - Hello World!</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<style>canvas { width: 100%; height: 100% }</style>
 	</head>
 	
 	<!-- Based on Three.js "Getting Started" tutorial. -->
