--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<LINK href="eta_carinae.css" rel="stylesheet" type="text/css">
+		<!-- <LINK href="eta_carinae.css" rel="stylesheet" type="text/css"> -->
 		<title>WebGL - Hello World!</title>
 		<style>canvas { width: 100%; height: 100% }</style>
 	</head>
