Rewrote render function signature.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			var cube = new THREE.Mesh(geometry, material);
 			scene.add(cube);
 			
-			funtion render() {
+			var render = funtion() {
 				requestAnimationFrame(render);
 				renderer.render(scene, camera);
 			}
