--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
 			
 			<!-- Cube creation -->
 			var geometry = new THREE.CubeGeometry(1, 1, 1);
-			var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
+			var material = new THREE.MeshBasicMaterial({color: 0x009900});
 			var cube = new THREE.Mesh(geometry, material);
 			scene.add(cube);
 			
 			var render = function() {
 				requestAnimationFrame(render);
+				
+				cube.rotation.x += 0.1;
+				cube.rotation.y += 0.1;
+				cube.rotation.z += 0.1;
+				
 				renderer.render(scene, camera);
 			};
 			
