--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			
 			<!-- Cube creation -->
 			var geometry = new THREE.CubeGeometry(1, 1, 1);
-			var material = new THREE.MeshPhongMaterial({ambient: 0x030303, color: 0x009955, specular: 0x009900, shininess: 30, shading: TREE.FlatShading});
+			var material = new THREE.MeshPhongMaterial({ambient: 0x030303, color: 0x009955, specular: 0x009900, shininess: 30, shading: THREE.FlatShading});
 			var cube = new THREE.Mesh(geometry, material);
 			scene.add(cube);
 			
