--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
 			var ambient01 = new THREE.AmbientLight(0x404040);
 			scene.add(ambient01);
 			
+			var pointLight = new THREE.PointLight();
+			pointLight.position.set(50, 150, 150);
+			scene.add(pointLight);
+			
 			<!-- Cube creation -->
 			var geometry = new THREE.BoxGeometry(1, 1, 1);
-			var material = new THREE.MeshPhongMaterial({ambient: 0x030303, color: 0x009955, specular: 0x009900, shininess: 30, shading: THREE.FlatShading});
+			var material = new THREE.MeshPhongMaterial({ambient: 0x030303, color: 0x009955, specular: 0x009900, shininess: 30, shading: THREE.SmoothShading});
 			var cube = new THREE.Mesh(geometry, material);
 			scene.add(cube);
 			
