--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			camera.position.z = 5;
 			
 			var renderer = new THREE.WebGLRenderer();
-			renderer.setSize(window.innerWidth, window.innerHeight);
+			renderer.setSize(canvas.width, canvas.height);
 			document.body.appendChild(renderer.domElement);
 			
 			<!-- Lighting setup -->
