Added size and border to div containing canvas.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Based on Three.js "Getting Started" tutorial. -->
 	<body>
 		<script src="js/three.min.js"></script>
-		<div id="WebGLCanvas" style="text-align: center">
+		<div id="WebGLCanvas" style="width:890px;height:600px;border:1px solid white;">
 		<script>
 			<!-- Scene, Camera and Renderer declaration and initialisation. -->
 			var scene = new THREE.Scene();
