--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			camera.position.z = 5;
 			
 			var renderer = new THREE.WebGLRenderer();			
-			renderer.setSize(window.innerWidth, window.innerHeight);
+			renderer.setSize(890, 600);
 			document.getElementById("WebGLCanvas").appendChild(renderer.domElement);
 			
 			<!-- Lighting setup -->
