Edited starling.html link.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 		<title>noise256 - Eta Carinae</title>
 	</head>
 	<body>
-		<a href="starlings/starlings.html" target="Flocking" </a>
+		<a href="starlings/starlings.html">Flocking</a>
 	</body>
 </html>
