Fixed bad call to renderer object.

--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -46,7 +46,7 @@
 				
 				<!-- Render function -->
 				function render() {
-					renderer.frame(scene, camera);
+					renderer.render(scene, camera);
 				}
 				
 				<!-- Frame function -->
