--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -64,7 +64,7 @@
 					cube.rotation.y += 0.01;
 					cube.rotation.z += 0.01;
 					
-					document.getElementById("spp_model").update();
+					//document.getElementById("spp_model").update();
 				}
 				
 				<!-- Render function -->
