--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -2,7 +2,7 @@
 	<head>
 		<!-- <LINK href="eta_carinae.css" rel="stylesheet" type="text/css"> -->
 		<title>Flocking</title>
-		<style>canvas { width: 100%; height: 100%; display: inline; } body { background-color:#000000; } </style>
+		<style>canvas { width: 800; height: 600; display: inline; } body { background-color:#000000; } </style>
 	</head>
 	
 	<!-- Based on Three.js "Getting Started" tutorial. -->
