--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -2,6 +2,7 @@
 	<head>
 		<!-- <LINK href="eta_carinae.css" rel="stylesheet" type="text/css"> -->
 		<title>Flocking</title>
+		<style>body { background-color:#000000; } </style>
 	</head>
 	
 	<!-- Based on Three.js "Getting Started" tutorial. -->
@@ -9,7 +10,7 @@
 		<script src="js/fpsmeter.js"></script>
 		<script src="js/three.min.js"></script>
 		<script id="spp_model" src="js/spp_model.js"></script>
-		<div id="WebGLCanvas" style="margin:auto; text-align:center; width: 800px height: 600px; border:1px solid white;">
+		<div id="WebGLCanvas" style="margin:auto; text-align:center; width: 800px; height: 600px; border:1px solid white;">
 			<script>
 				<!--Time Step based on http://codeincomplete.com/posts/2013/12/4/javascript_game_foundations_the_game_loop/ -->
 				var now;
@@ -18,7 +19,7 @@
 				var step = 1/60;
 				
 				<!-- FPSMeter -->
-				var fpsMeter = new FPSMeter(document.getElementById("WebGLCanvas"), { decimals: 0, graph: true, theme: 'dark', left: '5px' });
+				var fpsMeter = new FPSMeter(document.body, { decimals: 0, graph: true, theme: 'dark', left: '5px' });
 				
 				<!-- Scene, Camera and Renderer declaration and initialisation. -->
 				var canvasWidth = document.getElementById("WebGLCanvas").clientWidth;
