--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -7,6 +7,7 @@
 		<title>Flocking</title>
 		<style>body { background-color:#000000; } </style>
 		
+		<script src="js/sylvester.src.js" type="text/javascript"></script>
 		<script src="js/fpsmeter.js" type="text/javascript"></script>
 		<script src="js/three.min.js" type="text/javascript"></script>
 		<script src="js/spp.js" type="text/javascript"></script>
