--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -49,9 +49,10 @@
 				scene.add(pointLight);
 				
 				<!-- Scene creation -->
-				var sppModel = new SPPModel(100);
+				var sppModel = new SPPModel(10);
 				var sppModelView = sppModel.getView();
 				
+				console.warn(sppModelView.length);
 				for (i = 0; i < sppModelView.length; i++) {
 					var sppView = sppModelView[i];
 					scene.add(sppView);
