CSS, SPP View Changes, SPP movement.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<LINK href="eta_carinae.css" rel="stylesheet" type="text/css">
+		<LINK href="index.css" rel="stylesheet" type="text/css">
 		<title>noise256 - Eta Carinae</title>
 	</head>
 	<body>
