Changes SPP rendering to particle system.

--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -12,8 +12,8 @@
 		<script src="js/fpsmeter.js" type="text/javascript"></script>
 		<script src="js/three.min.js" type="text/javascript"></script>
 		<script src="js/OrbitControls.js" type="text/javascript"></script>
-		<script src="js/spp.js" type="text/javascript"></script>
-		<script src="js/spp_model.js" type="text/javascript"></script>
+		<script src="spp.js" type="text/javascript"></script>
+		<script src="spp_model.js" type="text/javascript"></script>
 	</head>
 	
 	<!-- Based on Three.js "Getting Started" tutorial. -->
