Changed current info on starlings.html

--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -125,7 +125,7 @@
 			</script>
 		</div>
 		<p>
-		Mousewheel is currently bugged, hold down mouse reel and drag to zoom. After some initial testing it appears that performance is substantially better in Chrome than in Firefox. More rigorous testing and optimisation will be done soon but for now I suggest using Google Chrome if you are having any performance issues.
+		LMB: zoom, MMB: Pan, RB: Rotate. After some initial testing it appears that performance is substantially better in Chrome than in Firefox. More rigorous testing and optimisation will be done soon but for now I suggest using Google Chrome if you are having any performance issues.
 		</p>
 	</body>
 </html>
