--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -126,9 +126,9 @@
 						Camera.
 					*/
 					camera = new THREE.PerspectiveCamera(60, canvasWidth / canvasHeight, 0.1, 1000);				
-					camera.position.x = 0
+					camera.position.x = 0.1;
 					camera.position.y = 10;
-					camera.position.z = 0;			
+					camera.position.z = 0.1;			
 					camera.lookAt(new THREE.Vector3(0, 10, 0));
 					
 					/**
