--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -223,7 +223,7 @@
 					Generate particles.
 					*/
 					var particles = new THREE.Geometry();
-					var pMaterial = new THREE.ParticleBasicMaterial( {size: 1, color: 0xffffff});//, map: THREE.ImageUtils.loadTexture("images/particle.png"), blending: THREE.AdditiveBlending, transparent: true} );
+					var pMaterial = new THREE.ParticleBasicMaterial( {size: 1, color: 0xffffff, map: THREE.ImageUtils.loadTexture("images/particle.png"), blending: THREE.AdditiveBlending, transparent: true} );
 				
 					for (i = 0; i < maxParticles; i++) {
 						var particle = new THREE.Vector3(Math.random()*2, Math.random()*2+10, Math.random()*2);
