Bug Fix Attempt.
Attempt to prevent camera controls functioning while mouse is outside of
"WebGLCanvas" dom element.

--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -154,8 +154,8 @@
 					/**
 						Controls.
 					*/
-					controls = new THREE.OrbitControls(camera);
-					controls.noMouse = true;
+					controls = new THREE.OrbitControls(camera, document.getElementById("WebGLCanvas");
+					//controls.noMouse = true;
 					controls.target.y = 10;
 					
 					/**
