--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -154,7 +154,7 @@
 					/**
 						Controls.
 					*/
-					controls = new THREE.OrbitControls(camera, document.getElementById("WebGLCanvas");
+					controls = new THREE.OrbitControls(camera, document.getElementById("WebGLCanvas"));
 					//controls.noMouse = true;
 					controls.target.y = 10;
 					
