--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -57,7 +57,7 @@
 					attractRange: 15,
 					walkStr: 250,
 					velocity: 0.01,
-					graviy: 0
+					gravity: 0
 				};
 				
 				var maxParticles = 350;
