--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>noise256 - Eta Carinae</title>
 	</head>
 	<body>
-		<a href="starlings/starlings.html">Flocking</a>
+		<div style="">
+			<a href="starlings/starlings.html">Flocking</a>
+		</div>
 	</body>
 </html>
