--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 			ul.grid {
 				list-style: none;
 				font-size: 0px;
-				margin-left: 0 0 2.5% 2.5%; /* should match li left margin */
+				margin-left: -2.5%; /* should match li left margin */
 			}
 			ul.grid li {
+				background: #fff;
 				position: relative;
 				height: 448;
 				display: inline-block;
 				padding: 0 10px;
 				margin: 0 0 2.5% 2.5%;
-				background: #fff;
 				border: 5px solid #ddd;
 				font-size: 32px;
 				font-size: 1rem;
@@ -67,7 +67,7 @@
 		</style>
 	</head>
 	<body>
-		<ul class="grid column-3">
+		<ul class="grid columns-3">
 			<li>
 				<a href="starlings/starlings.html" title="Starling Flocking"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
