--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -16,7 +16,7 @@
 	</head>
 	
 	<!-- Based on Three.js "Getting Started" tutorial. -->
-	<body onload="main()">
+	<body>
 		<div id="WebGLCanvas" style="margin:auto; width: 1000px; height: 800px; text-align:center; border:1px solid white;">
 			<script src="js/SPPModel.js" type="text/javascript"></script>
 		</div>
