--- a/index.html
+++ b/index.html
@@ -87,52 +87,52 @@
 		</h1>
 		<ul class="grid columns-2">
 			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="starling_link_bg.png"></a>
+				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>Descriptive description describing.</p>
 			</li>
 			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="starling_link_bg.png"></a>
+				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>Descriptive description describing.</p>
 			</li>
 			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="starling_link_bg.png"></a>
+				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>Descriptive description describing.</p>
 			</li>
 			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="starling_link_bg.png"></a>
+				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>Descriptive description describing.</p>
 			</li>
 						<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="starling_link_bg.png"></a>
+				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>Descriptive description describing.</p>
 			</li>
 			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="starling_link_bg.png"></a>
+				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>Descriptive description describing.</p>
 			</li>
 						<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="starling_link_bg.png"></a>
+				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>Descriptive description describing.</p>
 			</li>
 			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="starling_link_bg.png"></a>
+				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>Descriptive description describing.</p>
 			</li>
 						<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="starling_link_bg.png"></a>
+				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>Descriptive description describing.</p>
 			</li>
 			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="starling_link_bg.png"></a>
+				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>Descriptive description describing.</p>
 			</li>
