--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -22,7 +22,7 @@
 		</div>
 		
 		<p style="margin:auto; text-align:center;">
-			LMB: zoom, MMB: Pan, RB: Rotate. After some initial testing it appears that performance is substantially better in Chrome than in Firefox. More rigorous testing and optimisation will be done soon but for now I suggest using Google Chrome if you are having any performance issues.
+			LMB: zoom, MMB: Pan, RMB: Rotate. After some initial testing it appears that performance is substantially better in Chrome than in Firefox. More rigorous testing and optimisation will be done soon but for now I suggest using Google Chrome if you are having any performance issues.
 		</p>
 	</body>
 </html>
