Changed known issues formatting.

--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -27,7 +27,7 @@
 		<p style="margin:auto; text-align:center;">
 			LMB: zoom, MMB: Pan, RMB: Rotate. After some initial testing it appears that performance is substantially better in Chrome than in Firefox. More rigorous testing and optimisation will be done soon but for now I suggest using Google Chrome if you are having any performance issues.
 		</p>
-		<p style="margin:auto; text-align:center;">
+		<p style="margin:20px auto; text-align:left;">
 			Known issues:
 			
 			Setting acceleration to a high value and then lowering it to a low value results in unexpected SPP behaviour.
