Changed known issue text.

--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -30,7 +30,7 @@
 		<p style="margin:20px auto; text-align:left;">
 			Known issues:
 			
-			Setting acceleration to a high value and then lowering it to a low value results in unexpected SPP behaviour.
+			Setting acceleration to a high value and then lowering it to a low (non-zero) value results in unexpected SPP behaviour.
 		</p>
 	</body>
 </html>
