Added known issue.

--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -30,6 +30,7 @@
 		<p style="margin:20px auto; text-align:left;">
 			Known issues:
 			
+			Possible memory leak on reloading the page. Close and reopen browser to solve.
 			Setting acceleration to a high value and then lowering it to a low (non-zero) value results in unexpected SPP behaviour.
 		</p>
 	</body>
