Added line break to known issues.

--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -28,7 +28,7 @@
 			LMB: zoom, MMB: Pan, RMB: Rotate. After some initial testing it appears that performance is substantially better in Chrome than in Firefox. More rigorous testing and optimisation will be done soon but for now I suggest using Google Chrome if you are having any performance issues.
 		</p>
 		<p style="margin:20px auto; text-align:center;">
-			Known issues:
+			Known issues: <br>
 			
 			Possible memory leak on reloading the page. Close and reopen browser to solve. <br>
 			Setting acceleration to a high value and then lowering it to a low (non-zero) value results in unexpected SPP behaviour.
