Reordered calls in frame method.

--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -30,7 +30,7 @@
 		<p style="margin:20px auto; text-align:center;">
 			Known issues: <br>
 			
-			Possible memory leak on reloading the page. Close and reopen browser to solve. <br>
+			Memory leak on reloading the page. Close and reopen browser to solve. <br>
 			Setting acceleration to a high value and then lowering it to a low (non-zero) value results in unexpected SPP behaviour.
 		</p>
 	</body>
