--- a/starlings/starlings.html
+++ b/starlings/starlings.html
@@ -2,32 +2,27 @@
 
 <html>
 	<head>
-		<title>Flocking</title>
+		<title>SPP Simulation</title>
 		
 		<meta charset="UTF-8"> 
-		<LINK href="starlings.css" rel="stylesheet" type="text/css">
-	
+		<LINK href="webgl.css" rel="stylesheet" type="text/css">
+		
 		<script src="js/lib/common.js", type="text/javascript"></script>
 		<script src="js/lib/vec3.js", type="text/javascript"></script>
 		<script src="js/lib/three.min.js" type="text/javascript"></script>
 		<script src='js/lib/dat.gui.min.js' type='text/javascript'></script>
 		<script src="js/lib/fpsmeter.js" type="text/javascript"></script>
 		<script src="js/lib/OrbitControls.js" type="text/javascript"></script>
-		<script src="js/lib/threex.rendererstats.js" type="text/javascript"></script>
 	</head>
 	
-	<!-- Based on Three.js "Getting Started" tutorial. -->
 	<body>
-		<div id="rendererStats" style="position:absolute; left:0; bottom:0;">
-			<script src="js/lib/threex.rendererstats.js"></script>
-		</div>
-		<div id="WebGLCanvas" style="margin:auto; width: 1000px; height: 800px; text-align:center; border:1px solid white;">
+		<div id="canvas" class="webgl">
 			<script src="js/SPPModel.js" type="text/javascript"></script>
 		</div>
-		<p style="margin:auto; text-align:center;">
-			LMB: zoom, MMB: Pan, RMB: Rotate. After some initial testing it appears that performance is substantially better in Chrome than in Firefox. More rigorous testing and optimisation will be done soon but for now I suggest using Google Chrome if you are having any performance issues.
+		<p>
+			LMB: zoom, MMB: Pan, RMB: Rotate. Performance is substantially better in Chrome than in Firefox or IE. Optimisation will hopefully be looked at soon but for now I suggest using Chrome if you are having any performance issues.
 		</p>
-		<p style="margin:20px auto; text-align:center;">
+		<p>
 			Known issues: <br>
 			
 			Memory leak on reloading the page. Close and reopen browser to solve. <br>
