File/folder name changes.
File and folder names made consistent and based around spp simulation as
opposed to starling flocking.

--- a/index.html
+++ b/index.html
@@ -87,54 +87,9 @@
 		</h1>
 		<ul class="grid columns-2">
 			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
+				<a href="sppsim/sppsim.html" title="Self-Propelled Particle Simulation"><img src="images/spp_sim_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
-				<p>Descriptive description describing.</p>
-			</li>
-			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
-				<h3>Self-Propelled Particle Simulation</h3>
-				<p>Descriptive description describing.</p>
-			</li>
-			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
-				<h3>Self-Propelled Particle Simulation</h3>
-				<p>Descriptive description describing.</p>
-			</li>
-			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
-				<h3>Self-Propelled Particle Simulation</h3>
-				<p>Descriptive description describing.</p>
-			</li>
-						<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
-				<h3>Self-Propelled Particle Simulation</h3>
-				<p>Descriptive description describing.</p>
-			</li>
-			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
-				<h3>Self-Propelled Particle Simulation</h3>
-				<p>Descriptive description describing.</p>
-			</li>
-						<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
-				<h3>Self-Propelled Particle Simulation</h3>
-				<p>Descriptive description describing.</p>
-			</li>
-			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
-				<h3>Self-Propelled Particle Simulation</h3>
-				<p>Descriptive description describing.</p>
-			</li>
-						<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
-				<h3>Self-Propelled Particle Simulation</h3>
-				<p>Descriptive description describing.</p>
-			</li>
-			<li>
-				<a href="starlings/starlings.html" title="Starling Flocking"><img src="images/starling_link_bg.png"></a>
-				<h3>Self-Propelled Particle Simulation</h3>
-				<p>Descriptive description describing.</p>
+				<p>A minimal simulation of self-propelled particles with adjustable parameters.</p>
 			</li>
 		</ul>
 	</body>
