--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -17,7 +17,7 @@
 	
 	<body>
 		<div id="canvas" class="webgl">
-			<script src="js/sppsim_model.js" type="text/javascript"></script>
+			<script src="js/tradesim_model.js" type="text/javascript"></script>
 		</div>
 		<p>
 			LMB: zoom, MMB: Pan, RMB: Rotate. Performance is substantially better in Chrome than in Firefox or IE. Optimisation will hopefully be looked at soon but for now I suggest using Chrome if you are having any performance issues.
