--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>A minimal simulation of self-propelled particles with adjustable parameters.</p>
 			</li>
+			<li>
+				<a href="tradesim/tradesim.html" title="Space Trading Simulation"><img src="images/spp_sim_bg.png"></a>
+				<h3>Agent Based Space Trading Simulation</h3>
+				<p>An agent based simulation of trading between colonies.</p>
+			</li>
 		</ul>
 	</body>
 </html>
