--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				width: 97.5%;
 			}
 			ul.grid.columns-2 li {
-				width: 47.5%; /* this value + 2.5 should = 50% */
+				width: 22.5%; /* this value + 2.5 should = 50% */
 			}
 			ul.grid.columns-3 li {
 				width: 30.83%; /* this value + 2.5 should = 33% */
@@ -89,7 +89,7 @@
 			<li>
 				<a href="sppsim/sppsim.html" title="Self-Propelled Particle Simulation"><img src="images/spp_sim_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
-				<p>A minimal simulation of self-propelled particles with adjustable parameters.</p>
+				<p>A minimal simulation of self-propelled particles.</p>
 			</li>
 			<li>
 				<a href="tradesim/tradesim.html" title="Space Trading Simulation"><img src="images/spp_sim_bg.png"></a>
