--- a/index.html
+++ b/index.html
@@ -1,85 +1,7 @@
 <html>
 	<head>
-		<!-- <LINK href="index.css" rel="stylesheet" type="text/css"> -->
-		<title>noise256 - Eta Carinae</title>
-		<style type="text/css">
-			/*
-				Adapted from: http://alijafarian.com/responsive-image-grids-using-css/ 11.07.2014
-			*/
-			
-			body {
-				background-color:#f0ead6;
-				font-family: 'Helvetica Neue', arial, sans-serif;
-				font-weight: 200;
-			}
-			
-			h1 {
-				font-family: 'Oswald', sans-serif;
-				font-weight: 400;
-				margin: 0 0 20px;
-				text-align: center;
-			}
-			
-			ul.grid {
-				text-align:center;
-				font-size: 0px;
-				list-style: none;
-				margin-left: -2.5%;
-				margin-right: 2.5%;
-			}
-			ul.grid li {
-				display: inline-block;
-				padding: 10px;
-				margin: 0 0 2.5% 2.5%;
-				background: #fff;
-				border: 1px solid #ddd;
-				font-size: 16px;
-				font-size: 1rem;
-				vertical-align: top;
-				box-shadow: 0 0 5px #ddd;
-				box-sizing: border-box;
-				-moz-box-sizing: border-box;
-				-webkit-box-sizing: border-box;
-			}
-			ul.grid li a {
-				max-width:100%;
-				height:auto;
-				margin: 0 0 10px;
-			}
-			ul.grid li a img {
-				width: 100%;
-			}
-			ul.grid li h3 {
-				margin: 0 0 5px;
-			}
-			ul.grid li p {
-				font-size: .9em;
-				line-height: 1.5em;
-				color: #999;
-			}
-			ul.grid.columns-1 li {
-				width: 97.5%;
-			}
-			ul.grid.columns-2 li {
-				width: 22.5%; /* this value + 2.5 should = 50% */
-			}
-			ul.grid.columns-3 li {
-				width: 30.83%; /* this value + 2.5 should = 33% */
-			}
-			ul.grid.columns-4 li {
-				width: 22.5%; /* this value + 2.5 should = 25% */
-			}
-			
-			@media (max-width: 480px) {
-				ul.grid {
-					margin-left: 0;
-				}
-				ul.grid li {
-					width: 100% !important;
-					margin: 0 0 20px;
-				}
-			}
-		</style>
+		<LINK href="index.css" rel="stylesheet" type="text/css">
+		<title>Douglas Hoyal Cuthill - Portfolio in Progress</title>
 	</head>
 	<body>
 		<h1>
