Planet, colony and trader economy.

--- a/sppsim/sppsim.html
+++ b/sppsim/sppsim.html
@@ -25,8 +25,8 @@
 		<p>
 			Self-Propelled Particles are used to model flocking, swarming and schooling behaviour. The model has been applied to a rich host of biological species such as Starlings and Locusts. 
 			The model describes swarming behaviour at an individual scale where independent particles determine their movement from the positioning and orientation of the particles in their vicinity. In the most minimal form 
-			the model uses three rules to determine direction of movement of the particles at the next time step. These rules describe interaction between independent particles whereby they are repulsed at close distances, aligned at moderate 
-			distances and attracted at far distances.
+			the model uses three rules to determine direction of movement of the particles at the next time step. These rules describe interaction between independent particles whereby they are repulsed at close distances, aligned 
+			at moderate distances and attracted at far distances.
 		</p>
 	</body>
 </html>
