--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -11,7 +11,7 @@
 		<script src="js/lib/vec3.js", type="text/javascript"></script>
 		<script src="js/lib/three.min.js" type="text/javascript"></script>
 		<script src="js/lib/fpsmeter.js" type="text/javascript"></script>
-		<script src="js/lib/OrbitControls.js" type="text/javascript"></script>
+		<script src="js/lib/TrackballControls.js" type="text/javascript"></script>
 	</head>
 	
 	<body>
