--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -10,8 +10,9 @@
 		<script src="js/lib/common.js", type="text/javascript"></script>
 		<script src="js/lib/vec3.js", type="text/javascript"></script>
 		<script src="js/lib/three.min.js" type="text/javascript"></script>
-		<script src="js/lib/fpsmeter.js" type="text/javascript"></script>
 		<script src="js/lib/TrackballControls.js" type="text/javascript"></script>
+		<script src="js/lib/dat.gui.min.js", type="text/javascript"></script>
+		<script src="js/lib/fpsmeter.js" type="text/javascript"></script>
 	</head>
 	
 	<body>
