--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -20,7 +20,7 @@
 			<script src="js/tradesim_model.js" type="text/javascript"></script>
 		</div>
 		<p>
-			LMB: zoom, MMB: Pan, RMB: Rotate. Performance is substantially better in Chrome than in Firefox or IE. Optimisation will hopefully be looked at soon but for now I suggest using Chrome if you are having any performance issues.
+			LMB: Rotate, MMB: Zoom, RMB: Pan. Performance is substantially better in Chrome than in Firefox or IE. Optimisation will hopefully be looked at soon but for now I suggest using Chrome if you are having any performance issues.
 		</p>
 	</body>
 </html>
