--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -7,12 +7,16 @@
 		<meta charset="UTF-8"> 
 		<LINK href="webgl.css" rel="stylesheet" type="text/css">
 		
-		<script src="js/lib/common.js", type="text/javascript"></script>
-		<script src="js/lib/vec3.js", type="text/javascript"></script>
+		<script src="js/lib/jquery-2.1.1.min.js" type="text/javascript"></script>
+		<script src="js/lib/common.js" type="text/javascript"></script>
+		<script src="js/lib/vec3.js" type="text/javascript"></script>
 		<script src="js/lib/three.min.js" type="text/javascript"></script>
 		<script src="js/lib/TrackballControls.js" type="text/javascript"></script>
-		<script src="js/lib/dat.gui.min.js", type="text/javascript"></script>
+		<script src="js/lib/dat.gui.min.js" type="text/javascript"></script>
 		<script src="js/lib/fpsmeter.js" type="text/javascript"></script>
+		
+		<script data-src="shaders/vertex.shader" type="x-shader/x-vertex" id="vertexshader"></script>
+		<script data-src="shaders/fragment.shader" type="x-shader/x-fragment" id="fragmentshader"></script>
 	</head>
 	
 	<body>
