--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -15,8 +15,8 @@
 		<script src="js/lib/dat.gui.min.js" type="text/javascript"></script>
 		<script src="js/lib/fpsmeter.js" type="text/javascript"></script>
 		
-		<script data-src="shaders/vertex.shader" type="x-shader/x-vertex" id="vertexshader"></script>
-		<script data-src="shaders/fragment.shader" type="x-shader/x-fragment" id="fragmentshader"></script>
+		<!-- <script data-src="shaders/vertex.shader" type="x-shader/x-vertex" id="vertexshader"></script> -->
+		<!-- <script data-src="shaders/fragment.shader" type="x-shader/x-fragment" id="fragmentshader"></script> -->
 	</head>
 	
 	<body>
@@ -27,4 +27,26 @@
 			LMB: Rotate, MMB: Zoom, RMB: Pan. Performance is substantially better in Chrome than in Firefox or IE. Optimisation will hopefully be looked at soon but for now I suggest using Chrome if you are having any performance issues.
 		</p>
 	</body>
+	
+	<script type="x-shader/x-vertex" id="vertexshader">
+		#ifdef GL_ES
+		precision highp float;
+		#endif
+
+		void main()
+		{
+			gl_Position = projectionMatrix * modelViewMatrix * vec4(position,1.0);
+		}
+	</script>
+	<script type="x-shader/x-fragment" id="fragmentshader">
+		#ifdef GL_ES
+		precision highp float;
+		#endif
+
+		void main()
+		{
+			gl_FragColor 	= vec4(1.0,0.0,1.0,1.0);
+		}
+
+	</script>
 </html>
