--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -21,25 +21,14 @@
 	
 	<body>
 		<script type="x-shader/x-vertex" id="vertexshader">
-			#ifdef GL_ES
-			precision highp float;
-			#endif
-
-			void main()
-			{
+			void main() {
 				gl_Position = projectionMatrix * modelViewMatrix * vec4(position,1.0);
 			}
 		</script>
 		<script type="x-shader/x-fragment" id="fragmentshader">
-			#ifdef GL_ES
-			precision highp float;
-			#endif
-
-			void main()
-			{
-				gl_FragColor 	= vec4(1.0,0.0,1.0,1.0);
+			void main() {
+				gl_FragColor = vec4(1.0,0.0,1.0,1.0);
 			}
-
 		</script>
 			<div id="canvas" class="webgl">
 			<script src="js/tradesim_model.js" type="text/javascript"></script>
