--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -20,15 +20,9 @@
 	</head>
 	
 	<body>
-		<script type="x-shader/x-vertex" id="vertexshader">
-			void main() {
-				gl_Position = projectionMatrix * modelViewMatrix * vec4(position,1.0);
-			}
+		<script src="shader/fragment.shader" type="x-shader/x-vertex" id="vertexshader">
 		</script>
-		<script type="x-shader/x-fragment" id="fragmentshader">
-			void main() {
-				gl_FragColor = vec4(1.0,1.0,1.0,1.0);
-			}
+		<script src="shaders/vertex.shader" type="x-shader/x-fragment" id="fragmentshader">
 		</script>
 			<div id="canvas" class="webgl">
 			<script src="js/tradesim_model.js" type="text/javascript"></script>
