Fixed bad file path.

--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -20,7 +20,7 @@
 	</head>
 	
 	<body>
-		<script src="shader/fragment.shader" type="x-shader/x-vertex" id="vertexshader">
+		<script src="shaders/fragment.shader" type="x-shader/x-vertex" id="vertexshader">
 		</script>
 		<script src="shaders/vertex.shader" type="x-shader/x-fragment" id="fragmentshader">
 		</script>
