--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -20,9 +20,9 @@
 	</head>
 	
 	<body>
-		<script src="shaders/fragment.shader" type="x-shader/x-vertex" id="vertexshader">
+		<script data-src="shaders/fragment.shader" type="x-shader/x-vertex" id="vertexshader">
 		</script>
-		<script src="shaders/vertex.shader" type="x-shader/x-fragment" id="fragmentshader">
+		<script data-src="shaders/vertex.shader" type="x-shader/x-fragment" id="fragmentshader">
 		</script>
 			<div id="canvas" class="webgl">
 			<script src="js/tradesim_model.js" type="text/javascript"></script>
