--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -14,17 +14,15 @@
 		<script src="js/lib/TrackballControls.js" type="text/javascript"></script>
 		<script src="js/lib/dat.gui.min.js" type="text/javascript"></script>
 		<script src="js/lib/fpsmeter.js" type="text/javascript"></script>
-		
+		<script src="js/lib/ShaderLoader.min.js" type="text/javascript"></script>
+		<script data-src="shaders/vertex.shader" type="x-shader/x-vertex" data-name="shader"></script>
+		<script data-src="shaders/fragment.shader" type="x-shader/x-fragment" data-name="shader"></script>
 		<!-- <script data-src="shaders/vertex.shader" type="x-shader/x-vertex" id="vertexshader"></script> -->
 		<!-- <script data-src="shaders/fragment.shader" type="x-shader/x-fragment" id="fragmentshader"></script> -->
 	</head>
 	
 	<body>
-		<script data-src="shaders/vertex.shader" type="x-shader/x-vertex" id="vertexshader">
-		</script>
-		<script data-src="shaders/fragment.shader" type="x-shader/x-fragment" id="fragmentshader">
-		</script>
-			<div id="canvas" class="webgl">
+		<div id="canvas" class="webgl">
 			<script src="js/tradesim_model.js" type="text/javascript"></script>
 		</div>
 		<p>
