--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -15,8 +15,8 @@
 		<script src="js/lib/dat.gui.min.js" type="text/javascript"></script>
 		<script src="js/lib/fpsmeter.js" type="text/javascript"></script>
 		<script src="js/lib/ShaderLoader.min.js" type="text/javascript"></script>
-		<script data-src="shaders/vertex.shader" type="x-shader/x-vertex" data-name="shader"></script>
-		<script data-src="shaders/fragment.shader" type="x-shader/x-fragment" data-name="shader"></script>
+		<script data-src="shaders/vertex.js" data-name="shader" type="x-shader/x-vertex"></script>
+		<script data-src="shaders/fragment.js" data-name="shader" type="x-shader/x-fragment"></script>
 		<!-- <script data-src="shaders/vertex.shader" type="x-shader/x-vertex" id="vertexshader"></script> -->
 		<!-- <script data-src="shaders/fragment.shader" type="x-shader/x-fragment" id="fragmentshader"></script> -->
 	</head>
